# gpu_selection

./: CMakeLists.txt  README
app/: CMakeLists.txt  benchmark.cu  benchmark_sort.cu  test_basecase.cu  test_fixture.cuh  test_helpers.cu  test_qs.cu  test_ssss.cu
include/: cpu_reference.hpp  cuda_definitions.cuh  cuda_error.cuh  cuda_memory.cuh  cuda_timer.cuh  kernel_config.cuh  launcher_fwd.cuh  verification.hpp
lib/: CMakeLists.txt  cpu_reference.cpp  gen_instantiations.py  qs_launchers.cuh  qs_recursion.cuh  qs_recursion_multi.cuh  qs_reduce.cuh  qs_scan.cuh  ssss_build_searchtree.cuh  ssss_collect.cuh  ssss_collect_multi.cuh  ssss_count.cuh  ssss_launchers.cuh  ssss_merged.cuh  ssss_merged_memory.cuh  ssss_recursion.cuh  ssss_recursion_multi.cuh  ssss_reduce.cuh  utils.cuh  utils_basecase.cuh  utils_bytestorage.cuh  utils_mask.cuh  utils_prefixsum.cuh  utils_sampling.cuh  utils_search.cuh  utils_sort.cuh  utils_warpaggr.cuh  utils_work.cuh  verification.cpp
